# PythonDSProject

./: Data_Preprocessing.ipynb  Feature_Analysis.ipynb  Feature_Extraction.ipynb  Model_Training.ipynb  README.md  data_preprocessing.ipynb  feature_analysis.ipynb  feature_extraction.ipynb  feature_extraction_Natasza.ipynb  model_training.ipynb  pyproject.toml  run_tests.py  tox.ini
breastcancer_diagnosed_posts/: breastcancer_1hs38r3.txt  breastcancer_1hsrjjw.txt  breastcancer_1ht255b.txt  breastcancer_1ht62bs.txt  breastcancer_1htu6ek.txt  breastcancer_1htw57s.txt  breastcancer_1hufum4.txt  breastcancer_1hufykl.txt  breastcancer_1hum78l.txt  breastcancer_1huw0bg.txt  breastcancer_1hvavus.txt  breastcancer_1hvfxr7.txt
data/feature_analysis_output/: Empath_Correlation_Table.csv
data/feature_extracted_data/: bigram_feature_names.csv  empath_correlation_results.csv  empath_features_with_labels.csv  lda_topic_distributions_with_labels.csv  unigram_feature_names.csv
data_preprocessing/: data_preprocessing.py
depression_diagnosed_posts/: depression_1hrdmpq.txt  depression_1hrdycb.txt  depression_1hrjxqw.txt  depression_1hrmy39.txt  depression_1hrnqgh.txt  depression_1hro4md.txt  depression_1hrobmq.txt  depression_1hroife.txt  depression_1hrp1ii.txt  depression_1hrp9or.txt  depression_1hrpjnv.txt  depression_1hrpxy6.txt  depression_1hrzfa4.txt  depression_1hrzmum.txt  depression_1hs1we8.txt  depression_1hs2bhs.txt  depression_1hs7yq4.txt  depression_1hs8mxg.txt  depression_1hsd5yp.txt  depression_1hsiknv.txt  depression_1hsjlry.txt  depression_1hsjuts.txt  depression_1hsjw9k.txt  depression_1hso2zn.txt  depression_1hsxop9.txt  depression_1hsy9k3.txt  depression_1ht51ec.txt  depression_1htbyj4.txt  depression_1hte8vp.txt  depression_1htfxh6.txt  depression_1htgfni.txt  depression_1hthtux.txt  depression_1htj1jo.txt  depression_1htk80v.txt  depression_1htlwl6.txt  depression_1htm3oq.txt  depression_1htpk6n.txt  depression_1htwid8.txt  depression_1hu0g5s.txt  depression_1hubyve.txt  (+18 more)
diagnosed_posts/: 1hrmvnu.txt  1hsd5yp.txt  1hsk4gy.txt  1hso2zn.txt  1hsxop9.txt  1htbyj4.txt  1htsa9c.txt  1hubyve.txt  1huegvp.txt  1hugiog.txt  1hv48q0.txt  depression_1hrd1ls.txt  depression_1hrd4mg.txt  depression_1hrd94y.txt  depression_1hre9zm.txt  depression_1hrfss8.txt  depression_1hrhq57.txt  depression_1hridqx.txt  depression_1hrk641.txt  depression_1hrts4v.txt  depression_1hs2xd3.txt  depression_1hs4rh4.txt  depression_1hs9006.txt  depression_1hsdgoz.txt  depression_1hseovv.txt  depression_1hsfb6u.txt  depression_1hslw1i.txt  depression_1hsm4s4.txt  depression_1hsnsxi.txt  depression_1hszyhr.txt  depression_1ht4x8s.txt  depression_1ht80ye.txt  depression_1htaxn5.txt  depression_1htednj.txt  depression_1htlqya.txt  depression_1htnwpk.txt  depression_1hts3q4.txt  depression_1htsa9c.txt  depression_1htt2i9.txt  depression_1htzt97.txt  (+17 more)
feature_analysis/: feature_analysis.py  feature_analysis_func.py
feature_extraction/: base_feature_extraction_func.py  empath_feature_extraction_func.py  feature_extraction.py  feature_extraction_func.py  lda_feature_extraction_func.py  ngram_feature_extraction_func.py
model_training/: model_training.py  model_training_func.py
notebooks/: data_preprocessing.ipynb  feature_analysis.ipynb  feature_extraction.ipynb  model_training.ipynb
outputs/: Empath_Correlation_Table.csv
preprocessed_breastcancer_posts/: breastcancer_1hsbu13.txt  breastcancer_1hsc8lb.txt  breastcancer_1hufum4.txt  breastcancer_1hv7zzv.txt
preprocessed_depression_posts/: depression_1hrd1fp.txt  depression_1hrdpme.txt  depression_1hrdycb.txt  depression_1hrjxqw.txt  depression_1hrkmp2.txt  depression_1hrmvnu.txt  depression_1hrp1ii.txt  depression_1hrpxy6.txt  depression_1hrrnwo.txt  depression_1hs2xd3.txt  depression_1hs9006.txt  depression_1hslw1i.txt  depression_1hsm4s4.txt  depression_1hsnsxi.txt  depression_1hsz9vg.txt  depression_1hszyhr.txt  depression_1ht35ld.txt  depression_1ht76fv.txt  depression_1ht80ye.txt  depression_1htaaop.txt  depression_1htd5uv.txt  depression_1htdjsm.txt  depression_1htgfni.txt  depression_1htlqya.txt  depression_1htpeqt.txt  depression_1htpk6n.txt  depression_1htpz7s.txt  depression_1htt2i9.txt  depression_1htxzwy.txt  depression_1hu3926.txt  depression_1hufwk4.txt  depression_1hugc3y.txt  depression_1hul4r7.txt  depression_1humxjb.txt  depression_1hun99k.txt  depression_1hunb6e.txt  depression_1huprla.txt  depression_1huqttn.txt  depression_1huyv6c.txt  depression_1hv1osw.txt  (+3 more)
preprocessed_posts/breastcancer/: breastcancer_1h2pi83.txt  breastcancer_1h2u3f0.txt  breastcancer_1h4g7sf.txt  breastcancer_1h5g4qt.txt  breastcancer_1h5g618.txt  breastcancer_1h5lz5x.txt  breastcancer_1h5qpbs.txt  breastcancer_1h64xg7.txt  breastcancer_1h6xytf.txt  breastcancer_1h72d88.txt  breastcancer_1h77wwj.txt  (+260 more)
test/: test_data_preprocessing.py  test_feature_analysis.py  test_feature_extraction.py  test_model_training.py
(+7817 files in other folders)
