[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-depression-detection"
version = "0.1.0"
description = "Replicating Tadesse et al. (2019) for detecting depression-related Reddit posts."
authors = [
    "Natasza Siwinska <natsiwinska@gmail.com>",
    "Jamie Bergen <jgbergen18@gmail.com>"
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "nltk>=3.8",
    "pandas>=1.5",
    "numpy>=1.24",
    "matplotlib>=3.6",
    "scikit-learn>=1.2",
    "gensim>=4.3",
    "wordcloud>=1.9",
    "empath>=0.89",
    "statsmodels>=0.14",
    "pytest>=7.4"
]

[project.optional-dependencies]
dev = [
    "poetry-core>=1.0.0",
    "pytest>=7.4",
    "black",
    "flake8",
    "tox"
]

[tool.poetry.scripts]
run-feature-extraction = "feature_extraction.feature_extraction"
run-feature-analysis = "feature_analysis.feature_analysis"

[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = [
    "conf.py",
]
target-version = "py39"
lint.ignore = [
    "COM812",   # Conflicts with the formatter
    "ISC001",   # Conflicts with the formatter
    "ANN101",   # "missing-type-self"
    "PT001",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT004",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT005",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT023",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "D415",     # Docstring can end without ./!
    "D416",     # Docstring Return can end without :
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
    "D104", # No need to doc this file
]
"docs/**" = [
    "INP001",   # Requires __init__.py but docs folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = false
warn_unused_ignores = true
ignore_missing_imports = true
